test/types/enum/addEnumUint8.good
addEnumUint8.chpl:5: warning: uint(8)
addEnumUint8.chpl:6: warning: uint(8)
addEnumUint8.chpl:7: error: unresolved call '+(E, 1)'
(prediff deleted module lines)
